--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boxcar-frontend",
+  "name": "hnc_scholar_scores-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
