--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boxcar",
+  "name": "hnc_scholar_scores",
   "private": true,
   "scripts": {
     "lint-frontend": "cd frontend && npm i && npm run lint",
