lint syntax enabled false

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -53,6 +53,9 @@ Lint/StructNewOverride:
 Lint/ImplicitStringConcatenation:
   Enabled: false
 
+Lint/Syntax:
+  Enabled: false
+
 # ==================== Metrics ====================
 
 # Reason: Too difficult to resolve
