--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,7 +21,8 @@ AllCops:
     - node_modules/**/*
     - vendor/bundle/**/*
     - app/models/acasi_data_upload.rb
-    - frontend/node_modules/node-sass/src/libsass/**
+    - frontend/node_modules/node-sass/src/libsass/contrib/*
+    - frontend/node_modules/node-sass/src/libsass/*
     # Reason: Smarter CSV needs to make this COLUMN_HEADERS constant mutable.
   UseCache: false
 
