rubocop.yml change cop name

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -41,7 +41,7 @@ Layout/ClosingParenthesisIndentation:
 Layout/LineLength:
   Max: 100
 
-Layout/Tab:
+Layout/IndentationStyle:
   Enabled: true
 
 # ==================== Lint ====================
